[package]
name = "unnamed-rogulike"
version = "0.1.0"
authors = ["Tom Kellett <thessalikon@live.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.1.3"
display = { path = "./crates/display", version = "0.1" }

[[example]]
name = "set-terminal"
path = "examples/set-terminal/set-terminal.rs"