[package]
name = "unnamed-rogulike"
version = "0.1.0"
authors = ["Tom Kellett <thessalikon@live.co.uk>",
    "Brian Bruggeman <1350114+brianbruggeman@users.noreply.github.com>",
    ""
]
edition = "2018"

[workspace]
members = [
    "crates/*"
]


[[bin]]
name = "rl"
path = "src/bin/rl.rs"

[dependencies]
placeholder = { path = "crates/placeholder" }
bevy = "0.1.3"
display = { path = "crates/display" }

[[example]]
name = "set-terminal"
path = "examples/set-terminal/set-terminal.rs"


[profile.dev]
opt-level = 0
overflow-checks = true
debug-assertions = true
panic = "abort"
debug = false
codegen-units = 17
lto = false
incremental = true


[profile.release]
opt-level = 3
lto = "fat"
debug = false
overflow-checks = false
debug-assertions = false
panic = "abort"
# This improves performance slightly
# This reduces binary size
# This adds a lot of compilation time
codegen-units = 1
